# do_bnns_need_to_be_fully_stochastic

./: LICENSE  README.md
1D_Regression/: LICENSE  README.md  pyproject.toml
1D_Regression/configs/: config.yaml
1D_Regression/configs/callbacks/: default.yaml  regression.yaml  toy_regression.yaml
1D_Regression/configs/datamodule/: toy_regression_a.yaml
1D_Regression/configs/logger/: wandb.yaml
1D_Regression/configs/mode/: debug.yaml  default.yaml  exp.yaml
1D_Regression/configs/model/: bayesian_mlp.yaml  mixed_stochastic_mlp.yaml
1D_Regression/configs/trainer/: debug.yaml  default.yaml
1D_Regression/notebooks/: 1d_hmc.ipynb  map_silu50.pkl  vi_pathology.ipynb
1D_Regression/notebooks/vi_pathology_checkpoints/: ddds_1_6999.ckpt  ddds_alt_1.ckpt  ddds_alt_2.ckpt  ddds_alt_3.ckpt  ssss_1_9999.ckpt  ssss_alt_1.ckpt  ssss_alt_2.ckpt  ssss_alt_3.ckpt
1D_Regression/singularity/: targetted_uncertainty.def
1D_Regression/src/: train.py
1D_Regression/src/callbacks/: wandb_callbacks.py
Laplace_and_SWAG/: README.md  pyproject.toml
Laplace_and_SWAG/laplace/: baselaplace.py  subnetlaplace.py
Laplace_and_SWAG/notebooks/: plots.ipynb
Laplace_and_SWAG/scripts/: sublayer_laplace_val.py  sublayer_swag_val.py  subnetwork_laplace_val.py  train_map.py
Laplace_and_SWAG/singularity/: singularity.def
VI/: README.md  pyproject.toml
VI/notebooks/: analyse_subset_vi_from_csv.ipynb  analyse_subset_vi_generate_csv.ipynb  cifar100_all_results_df.csv  cifar10_all_results_df.csv  subset_vi_plots_initial_investigation.ipynb
VI/scripts/: dispatch_jobs.sh  generic.sh
VI/singularity/: singularity.def
(+16 files in other folders)
