[tool.poetry]
name = "laplace"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^1.11.0"
asdfghjkl = "^0.1a2"
black = "^22.3.0"
jupyter = "^1.0.0"
jupyterlab = "^3.4.2"
numpy = "^1.22.3"
seaborn = "^0.11.2"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
