[tool.poetry]
name = "uncertainty-baselines"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = ">3.9, <4.0"
tensorflow-datasets = "^4.5.2"
jupyterlab = "^3.3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
